[project]
name = "analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fissix>=24.4.24",
    "numpy>=2.2.4",
    "psutil>=7.0.0",
    "pyusb>=1.3.1",
    "pyvisa>=1.14.1",
    "pyvisa-py>=0.7.2",
    "zeroconf>=0.146.1",
]
